--- a/articles/2012-03-05-FM-HYMITATOR/biblioFM.bib
+++ b/articles/2012-03-05-FM-HYMITATOR/biblioFM.bib
@@ -70,7 +70,7 @@
 @article{acef09,
 	author =	{Andr{\'e}, {\'E}. and Chatain, T. and Encrenaz, E. and Fribourg, L.},
 	DOI =	{10.1142/S0129054109006905},
-	journal =	{International Journal of Foundations of Computer Science},
+	journal =	{IJFCS},
 	number =	{5},
 	pages =	{819-836},
 	publisher =	{World Scientific},
@@ -79,6 +79,7 @@
 	year =	{2009},
 }
   	month =	oct,
+	journal =	{International Journal of Foundations of Computer Science},
   	url =	{http://www.lsv.ens-cachan.fr/Publis/PAPERS/PDF/ACEF-ijfcs09.pdf},
 
 
@@ -1448,18 +1449,19 @@ Proceedings of the 9th International Conference on Concurrency Theory
   	author =	{Fribourg, Laurent and K{\"u}hne, Ulrich},
   	booktitle =	{{RP}'11},
   	DOI =	{10.1007/978-3-642-24288-5_17},
-  	editor =	{Delzanno, Giorgio and Potapov, Igor},
   	pages =	{191--204},
   	publisher =	{Springer},
-  	series =	{Lecture Notes in Computer Science},
+  	series =	{LNCS},
   	title =	{Parametric Verification and Test Coverage for Hybrid Automata Using the Inverse Method},
   	url =	{http://www.lsv.ens-cachan.fr/Publis/PAPERS/PDF/FK-RP11.pdf},
   	volume =	{6945},
   	year =	{2011},
 }
+  	series =	{Lecture Notes in Computer Science},
   	month =	sep,
   	address =	{Genova, Italy},
   	booktitle =	{{P}roceedings of the 5th {W}orkshop on {R}eachability {P}roblems in {C}omputational {M}odels ({RP}'11)},
+  	editor =	{Delzanno, Giorgio and Potapov, Igor},
 
 
 @inproceedings{fkr06,
