--- a/articles/2012-03-05-FM-HYMITATOR/2012-04-22-HYMITATOR-iFM.tex
+++ b/articles/2012-03-05-FM-HYMITATOR/2012-04-22-HYMITATOR-iFM.tex
@@ -326,7 +326,7 @@
 % \title{Efficient Analysis of Parametric Hybrid Systems with HYMITATOR}
 \title{Parametric Analysis of Hybrid Systems Using HYMITATOR}
 % \thanks{A long version of this paper is available in~\cite{AS11}, with full preliminary definitions, and all detaild algorithms and proofs.}
-\author{\'Etienne Andr\'e$^1$, %Laurent Fribourg$^2$,
+\author{\'Etienne Andr\'e$^1$ and %Laurent Fribourg$^2$,
 	Ulrich K\"uhne$^2$% and Romain Soulat$^2$
 	}
 \institute{$^1$LIPN, CNRS UMR 7030, Université Paris 13, France \\
@@ -339,7 +339,7 @@ $^2$Group for Computer Architecture, University of Bremen, Germany}
 \maketitle
 
 \begin{abstract}
-	Hybrid Automata are a powerful formalism for modeling and verifying hybrid systems, that combine continuous and discrete behavior.
+	Hybrid automata are a powerful formalism for modeling and verifying hybrid systems, that combine continuous and discrete behavior.
 	A common problem in hybrid system verification is the good parameters problem, which consists in identifying a set of parameter valuations which guarantee a certain behavior of a system.
 	We introduce here \hymitator{}, a tool allowing efficient parameter synthesis for hybrid automata, and providing the system with a quantitative measure of its robustness.
 \end{abstract}
