--- a/articles/2012-03-05-FM-HYMITATOR/2012-04-22-HYMITATOR-iFM.tex
+++ b/articles/2012-03-05-FM-HYMITATOR/2012-04-22-HYMITATOR-iFM.tex
@@ -495,7 +495,7 @@ Different  from timed automata, hybrid automata do not restrict coefficients app
 For this reason, instead of considering only integer points as starting points for the inverse method, an arbitrary rational step size can be used for each parameter dimension in \hymitator{}.
 This gives more accurate results, by reducing the size of the possible ``holes'' not covered by any tile of the cartography.
 
-\hymitator{} (with sources, binaries and case studies) is available on its Web page: \url{http://www-lipn.univ-paris13.fr/~andre/software/hymitator/}.
+\hymitator{} (with sources, binaries and case studies) is available on its Web page: \url{http://www.lsv.ens-cachan.fr/Software/hymitator/}.
 
 
 
